# stakewolle_2

./: .flake8  .gitignore  Dockerfile  Makefile  Readme.md  pyproject.toml
.github/workflows/: linter_check.yml
main_app/: main.py
